- 'End' key would go to the end of the physical line if the caret was on
  the first screen line of a wrapped line
- Due to the changes in buffer property handling caused by the
  transition to the new document model, new files would always have the
  system default line separator and encoding, instead of the defaults
  that were specified in the 'Loading and Saving' option pane

* Version 4.0pre6

+ New Features

- Enhanced quick copy feature:
  - Dragging with the middle mouse button now creates a selection
    without moving the caret, when the mouse button is released the
    selected text is inserted at the caret position and the selection is
    deactivated
  - A status bar message is shown while middle-dragging to avoid
    confusion
  - This is disabled by default -- enable in Text Area option pane
- Modula-3 syntax highlighting (Marcio Marchini)
- Smalltalk syntax highlighting (Marcio Marchini)

+ Enhancements

- Minor tweaks to VFS path code, that should make things a bit smoother
  for the FTP plugin
- Updated Prolog syntax highlighting (Giulio Piancastelli)
- Hard wrapping is now performed if there is only whitespace between the
  caret and the end of the line
- Pressing the Up or Down arrow when the caret is the first or last line
  of the buffer moves the caret to the beginning and end of the buffer,
  respectively
- Only one 'Search and Replace' dialog can be opened per view. Note that
  due to bugs in the Linux (and probably other Unix) Java
  implementation, the dialog has to be mometarily hidden and shown again
  for this to work
- Favorites menu in file system browser is now sorted using a
  case-insensitive sort
- Improved behavior of 'Plugins' menu when lots of plugins are installed
- Slightly faster scrolling
- Added 'Close' command to file dialog's right-click menu
- Removed funky background token's "paint to end of line" behavior
- Saving a file no longer causes cached token information to be flushed